# amethyst-sub

./: Cargo.toml  README.md
.cargo/: config.toml
assets/sprites/: sensei.ron  tilesheet.ron
config/: display_config.ron  input.ron
specs/: simple_map.md
src/: main.rs  map.rs  state.rs
src/systems/: mod.rs  player.rs  sensei.rs
