[package]
name = "amethyst-miner"
version = "0.2.0"
authors = ["Andy Bell <andy.bell@barkingmad.io>"]
edition = "2018"

[dependencies]
amethyst = {version = "0.15.2", features = ["no-slow-safety-checks"]}
log = { version = "0.4.8", features = ["serde"] }

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
